kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: self-service-api
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: self-service-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: self-service-api
    spec:
      serviceAccountName: self-service-api-sa
      containers:
        - name: self-service-api
          image: ${CONTAINER_IMAGE_TAGGED}
          resources:
            requests:
              memory: "100Mi"
              cpu: "10m"
            limits:
              memory: "500Mi"
              cpu: "300m"
      imagePullSecrets:
        - name: ecr-credentials

---
apiVersion: v1
kind: Service
metadata:
  name: self-service-api
spec:
  ports:
    - port: 3000
  selector:
    app.kubernetes.io/name: self-service-api
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: self-service-api
  annotations:
    alb.ingress.kubernetes.io/success-codes: 200-399

    # TODO: remove once configured at IngressClassParams level
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'


    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Self-Service Suite
    gethomepage.dev/name: Self-service API
    gethomepage.dev/description: Allows users to create API from a PostgreSQL on their own
    gethomepage.dev/icon: http://gitlab.jtektrnd.net/uploads/-/system/project/avatar/3714/self-service-api.png
spec:
  rules:
  - host: self-service-api.ssc.jtektrnd.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: self-service-api
            port:
              number: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: self-service-api
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - self-service-api.ssc.jtektrnd.net
  rules:
    - backendRefs:
        - name: self-service-api
          port: 3000
